# medrega-liver-seminar

./: .gitignore  AGENTS.md
alqac2026/: .env.example  README.md  pyproject.toml
alqac2026/data/: README.md
alqac2026/docs/: architecture.md  competition-scout.md  data-manifest.md  email-notes.md  mvp-status.md
alqac2026/docs/journals/: 260716-0822-alqac-quality-v1.md  260716-1802-alqac-mvp-first-submission.md
alqac2026/docs/reference/: alqac-api-openapi.json  task-info.json
alqac2026/plans/260716-0002-alqac-mvp/: phase-01-foundation-private-contract.md  phase-02-retrieval-safety.md  phase-03-baseline-reasoning-law.md  phase-04-pipeline-submission-eval.md  phase-05-agentic-retrieval.md  plan.md
alqac2026/plans/260716-0002-alqac-mvp/reports/: 260716-0105-mvp-status.md  260716-0822-quality-v1-review.md  pm-260716-0822-quality-v1.md
alqac2026/plans/research/: 260716-2225-legal-graph-rag-frameworks.md
alqac2026/prompts/: outcome-prediction.txt
alqac2026/schemas/: submission.schema.json
alqac2026/src/alqac2026/: __init__.py  cli.py  config.py  data_loader.py  private_view.py  schemas.py
alqac2026/src/alqac2026/evaluation/: __init__.py  (+2 more)
alqac2026/submissions/: README.md
alqac2026/tests/: test_budget.py  test_cache.py  test_cli_parser.py  test_data_loader.py  test_dev_batch.py  test_evidence_selector.py  test_law_retrieval.py  test_llm_runner.py  test_naive_bayes.py  test_outcome_predictor.py  test_pipeline_offline.py  test_private_view.py  test_quality_metrics.py  test_query_planner.py  test_retrieval_client.py  test_schemas.py  test_submission.py
(+77 files in other folders)
