[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alqac2026"
version = "0.1.0"
description = "Private-safe ALQAC 2026 baseline and submission pipeline"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
alqac2026 = "alqac2026.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
